# cc2538

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  device.x
src/: aes.rs  ana_regs.rs  cctest.rs  flash_ctrl.rs  gpio_a.rs  gptimer3.rs  i2cm.rs  i2cs.rs  ioc.rs  lib.rs  pka.rs  rfcore_ffsm.rs  rfcore_sfr.rs  rfcore_xreg.rs  smwdthrosc.rs  soc_adc.rs  ssi1.rs  sttest.rs  sys_ctrl.rs  uart0.rs  udma.rs  usb.rs
src/aes/: aes_auth_length.rs  aes_c_length_0.rs  aes_c_length_1.rs  aes_ctrl.rs  aes_data_in_out_0.rs  aes_data_in_out_1.rs  aes_data_in_out_2.rs  aes_data_in_out_3.rs  aes_iv_0.rs  aes_iv_1.rs  aes_iv_2.rs  aes_iv_3.rs  aes_key2_0.rs  aes_key2_1.rs  aes_key2_2.rs  aes_key2_3.rs  aes_key3_0.rs  aes_key3_1.rs  aes_key3_2.rs  aes_key3_3.rs  aes_tag_out_0.rs  aes_tag_out_1.rs  aes_tag_out_2.rs  aes_tag_out_3.rs  ctrl_alg_sel.rs  ctrl_int_cfg.rs  ctrl_int_clr.rs  ctrl_int_en.rs  ctrl_int_set.rs  ctrl_int_stat.rs  ctrl_options.rs  ctrl_prot_en.rs  ctrl_sw_reset.rs  ctrl_version.rs  dmac_ch0_ctrl.rs  dmac_ch0_dmalength.rs  dmac_ch0_extaddr.rs  dmac_ch1_ctrl.rs  dmac_ch1_dmalength.rs  dmac_ch1_extaddr.rs  (+38 more)
src/ana_regs/: ivctrl.rs
src/cctest/: io.rs  obssel0.rs  obssel1.rs  obssel2.rs  obssel3.rs  obssel4.rs  obssel5.rs  obssel6.rs  obssel7.rs  tr0.rs  usbctrl.rs
src/flash_ctrl/: diecfg0.rs  diecfg1.rs  diecfg2.rs  faddr.rs  fctl.rs  fwdata.rs
src/gpio_a/: afsel.rs  ic.rs  irq_detect_ack.rs  irq_detect_unmask.rs
src/gpio_b/: pi_ien.rs  pmux.rs
src/gpio_c/: gpiocr.rs  gpiolock.rs  iev.rs  mis.rs  ris.rs  (+1 more)
svd/: cc2538sf53.patch  cc2538sf53.svd
(+424 files in other folders)
