[package]
authors = ["Felipe Lalanne <felipe@lalanne.cl>"]
description = "Peripheral access API for CC2538 System-on-Chip"
keywords = ["no-std", "arm", "cortex-m", "cc2538"]
license = "Apache-2.0"
name = "cc2538"
version = "0.1.0"
repository = "https://github.com/pipex/cc2538"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.8"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]
